cmake_minimum_required(VERSION 3.0.0)
project(YJSP VERSION 0.1.0)
set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++14 -pthread")
set(OpenCV_DIR "/opt/intel/openvino/opencv/cmake")
find_library(WIRING wiringPi)
add_subdirectory(thirdparty/RaspberryPiRC/RPiIBus)
add_subdirectory(thirdparty/RaspberryPiMPU/src)
add_subdirectory(thirdparty/QRModule/src)
add_executable(YJSP main.cpp pca9685.c)
target_link_libraries(YJSP Ibus)
target_link_libraries(YJSP ${WIRING})
target_link_libraries(YJSP RPiMPU)
